force-app/main/modules/businessDossier/objects/Business_Data_SBI__c/Business_Data_SBI__c.object-meta.xml
<CustomObject>
    <description>A DutchBusiness Company SBI Collection.</description>
    <label>SBI Code</label>
    <nameField>
        <displayFormat>SBI-{000000}</displayFormat>
        <label>SBI Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SBI Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>