force-app/main/modules/businessDossier/objects/Business_Data_SBI__c/fields/Business_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Business_Dossier__c</fullName>
    <label>Business Dossier</label>
    <referenceTo>Business_Dossier__c</referenceTo>
    <relationshipName>SBIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>