force-app/main/modules/businessDossier/objects/Business_Data_SBI__c/fields/SBI_Description__c.field-meta.xml
<CustomField>
    <fullName>SBI_Description__c</fullName>
    <description>Description of the SBI code.</description>
    <label>SBI Description</label>
    <type>TextArea</type>
</CustomField>