force-app/main/modules/businessDossier/objects/Business_Data_SBI__c/fields/SBI_Type__c.field-meta.xml
<CustomField>
    <fullName>SBI_Type__c</fullName>
    <description>SBI collection type</description>
    <label>SBI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>original</fullName>
            </value>
            <value>
                <fullName>company_info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>